# cashback_payment_bot

./: .env.dist  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: cd.yml  ci.yml
src/core/: config.py  constants.py  settings_env.py
src/handlers/payment/: __init__.py  q1_start.py  q2_phone_number.py  q3_bank.py  q4_amount.py  q5_confirming_payment.py
src/infrastructure/: keyboards.py  states.py  superbanking.py
src/tools/: string_converter.py
