[project]
name = "telegram-cashback-payment-bot"
version = "0.1.0"
description = "Telegram cashback bot payment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Telegram
    "aiogram==3.21.0",
    "redis==7.0.0",

    # Database and migrations
    "requests==2.32.5",

    # config
    "pydantic==2.11.7",
    "pydantic-settings==2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "pyproject.toml", "README.md"]